salesforce-reference/force-app/main/default/objects/Base_Position__c/Base_Position__c.object-meta.xml
<CustomObject>
    <label>Base Position</label>
    <nameField>
        <label>Base Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>