salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Base_Position_Status__c.field-meta.xml
<CustomField>
    <fullName>Base_Position_Status__c</fullName>
    <label>Base Position Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>