salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/HyperlinkToBasePositionRecord__c.field-meta.xml
<CustomField>
    <fullName>HyperlinkToBasePositionRecord__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; Id , Name, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HyperlinkToBasePositionRecord</label>
    <type>Text</type>
</CustomField>