salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Position_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_Open_Date__c</fullName>
    <formula>Position_Open_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Open Date</label>
    <type>Date</type>
</CustomField>