salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Position_Open_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Position_Open_Date_Time__c</fullName>
    <label>Position Open Date Time</label>
    <summarizedField>Short_Option_Top_Position__c.Order_Date_and_Time_Filled__c</summarizedField>
    <summaryForeignKey>Short_Option_Top_Position__c.Base_Position__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>