salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Position_Running_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_Running_Close_Date__c</fullName>
    <label>Position Running Close Date</label>
    <type>DateTime</type>
</CustomField>