salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Position_Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Position_Total_Days__c</fullName>
    <description>While it is open &quot;Day 0&quot; is considered 1 day in the position</description>
    <formula>IF(NOT(ISBLANK(Position_Running_Close_Date__c)), (Position_Running_Close_Date__c - Position_Open_Date_Time__c), (DATEVALUE(TEXT(TODAY())) - DATEVALUE(TEXT(Position_Open_Date__c))) + 1)</formula>
    <label>Position Total Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>