salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Position_Total_Days_Periods_in_Year__c.field-meta.xml
<CustomField>
    <fullName>Position_Total_Days_Periods_in_Year__c</fullName>
    <formula>365 /  Position_Total_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position &quot;Total Days&quot; Periods in Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>