salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Stock_or_Long_Call__c.field-meta.xml
<CustomField>
    <fullName>Stock_or_Long_Call__c</fullName>
    <label>Stock or Long Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock/Equity</fullName>
            </value>
            <value>
                <fullName>Long Call Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>