salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Stock_Price__c.field-meta.xml
<CustomField>
    <fullName>Stock_Price__c</fullName>
    <label>Stock Price</label>
    <precision>12</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>