salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Cost_Basis_of_Position__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Basis_of_Position__c</fullName>
    <formula>(Total_Long_Option_Net_Debit__c +  Total_Short_Option_Net_Credit__c) * -1</formula>
    <inlineHelpText>Total Long Option Net Debit and Total Short Option Net Credit added together.

This is your MAXIMUM LOSS for the position.  You can&apos;t lose more than this, regardless of how far the stock drops.</inlineHelpText>
    <label>Total Cost Basis of Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>