salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Initial_Capital_Invested__c.field-meta.xml
<CustomField>
    <fullName>Total_Initial_Capital_Invested__c</fullName>
    <description>The initial max loss - the cost of the initial long option minus the first short position premium.</description>
    <label>Total Initial Capital Invested</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>