salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Long_Option_Net_Debit__c.field-meta.xml
<CustomField>
    <fullName>Total_Long_Option_Net_Debit__c</fullName>
    <inlineHelpText>The Sum of all Long Option Order Principals - how much has been paid to date for the long position</inlineHelpText>
    <label>Total Long Option Net Debit</label>
    <summarizedField>Long_Option_Bottom_Position__c.Long_Option_Order_Principal__c</summarizedField>
    <summaryForeignKey>Long_Option_Bottom_Position__c.Base_Position__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>