salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Long_Position_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Long_Position_Current_Value__c</fullName>
    <inlineHelpText>Manually entered from your broker.  How much is your long position worth right now?</inlineHelpText>
    <label>Total Long Position Current Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>