salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Overall_Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Overall_Profit_Loss__c</fullName>
    <formula>Total_Long_Position_Profit_Loss__c +  Total_Short_Position_Profit_Loss__c</formula>
    <inlineHelpText>Total Long Position Profit/Loss + Total Short Position Profit/Loss.  If either of those values are blank, this will be blank.</inlineHelpText>
    <label>Total Overall Profit/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>