salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_ROI_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Total_ROI_Annualized__c</fullName>
    <formula>Total_ROI_Current__c *  Position_Total_Days_Periods_in_Year__c</formula>
    <inlineHelpText>The current ROI * Position &quot;Total Days&quot; Periods in year (i.e. the fraction of the year the position took to achieve that ROI)</inlineHelpText>
    <label>Total ROI - Annualized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>