salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_ROI_Current__c.field-meta.xml
<CustomField>
    <fullName>Total_ROI_Current__c</fullName>
    <formula>IF( ISPICKVAL( Base_Position_Status__c , &apos;Open&apos;), (Total_Overall_Profit_Loss__c /  Total_Cost_Basis_of_Position__c), (Total_Overall_Profit_Loss__c /  Total_Initial_Capital_Invested__c))</formula>
    <inlineHelpText>If the Base Position has a Status of Open, this is the Total Overall Proft/Loss divided by the Cost Basis.  If the Base Position has a status of Closed, this is the Total Overall Profit/Loss divided by the Initial Capital Invested.</inlineHelpText>
    <label>Total ROI - Current</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>