salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Short_Extrinsic_Realized__c.field-meta.xml
<CustomField>
    <fullName>Total_Short_Extrinsic_Realized__c</fullName>
    <inlineHelpText>Summary of the Extrinsic value from all short option positions together.</inlineHelpText>
    <label>Total Short Extrinsic Realized</label>
    <summarizedField>Short_Option_Top_Position__c.Total_Extrinsic_at_Expiration_or_Roll__c</summarizedField>
    <summaryForeignKey>Short_Option_Top_Position__c.Base_Position__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>