salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Short_Position_Open_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Short_Position_Open_Current_Value__c</fullName>
    <inlineHelpText>The value from your brokerage account - how much is your short position worth right now?</inlineHelpText>
    <label>Total Short Position Open Current Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>