salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Short_Position_Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Short_Position_Profit_Loss__c</fullName>
    <formula>Total_Short_Position_Open_Current_Value__c +  Total_Short_Option_Net_Credit__c</formula>
    <inlineHelpText>The current value of your short position plus the total net credits from all your previous short positions combined. If Total Short Position Open Current Value is Blank, this will be blank</inlineHelpText>
    <label>Total Short Position Profit/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>