salesforce-reference/force-app/main/default/objects/Base_Position__c/fields/Total_Stock_Share_Net_Debit__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock_Share_Net_Debit__c</fullName>
    <inlineHelpText>SUM of all related Stock Share Order Principals</inlineHelpText>
    <label>Total Stock Share Net Debit</label>
    <summarizedField>Stock_Share_Bottom_Position__c.Stock_Share_Order_Principal__c</summarizedField>
    <summaryForeignKey>Stock_Share_Bottom_Position__c.Base_Position__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>