salesforce-reference/force-app/main/default/objects/Base_Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Base_Position_Status__c</columns>
    <columns>Total_Overall_Profit_Loss__c</columns>
    <columns>Position_Total_Days__c</columns>
    <columns>Total_ROI_Current__c</columns>
    <columns>Total_ROI_Annualized__c</columns>
    <columns>Position_Open_Date__c</columns>
    <columns>Position_Running_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>